# vizmat

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs  ui.rs
vizmat-app/: index.html  index.js  mobile-gesture.js  style.css
vizmat-core/: Cargo.toml
vizmat-core/benches/: bond_cache.rs
vizmat-core/src/: client.rs  constants.rs  io.rs  lib.rs  parse.rs  structure.rs  ui.rs
vizmat-core/src/formats/: mod.rs  pdb.rs  sdf.rs  xyz.rs
vizmat-core/src/ui/: picker.rs
wasm/: index.js  vite.config.js
