[workspace]
resolver = "3"
members = [ 
    "vizmat-app",
    "vizmat-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "blob for every crates relate to ccmat utils, and crates."
authors = ["rs4rse.github.io"]
readme = "README.md"
repository = "https://github.com/rs4rse/vizmat"
homepage = "https://github.com/rs4rse/vizmat"
license = "MIT OR Apache-2.0"
keywords = ["science", "crystal", "material", "molecule"]
exclude = [
    "misc/*",
]

# optimize for smaller WASM binary size
[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 0

[patch.crates-io]
coreaudio-sys = { path = "third_party/coreaudio-sys" }
